tests/positive/exceptions/try_finally_no_catch/input.ci
// try/finally with no catch clause — cleanup always guaranteed
void main() {
    try {
        print("work\n");
    } finally {
        print("cleanup\n");
    }
    print("done\n");
}
