tests/negative/runtime/substr_start_past_end/input.ci
void main() {
    print(substr("abc", 4, 0) + "\n");
}
